# Wasserstein

./: CMakeLists.txt  Makefile  pyproject.toml  setup.cfg
.github/workflows/: build-wheels.yml  ci.yml
docker/: Dockerfile
scripts/: build-wheels-and-upload.sh
src/wasserstein/: __init__.py  _wasserstein.py  config.py  wasserstein.py
tests/: test_config.py
wasserstein/: _wasserstein.py
