[build-system]
requires = [
    "scikit-build-core",
    "swig",
    "oldest-supported-numpy; python_version < '3.9'",
    "numpy>=2.0.0; python_version >= '3.9'",
]
build-backend = "scikit_build_core.build"

[project]
name = "wasserstein"
dynamic = ["version"]
description = "Python package wrapping C++ code for computing Wasserstein distances"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">= 3.7"
authors = [
    { name = "Patrick T. Komiske III", email = "pkomiske@mit.edu" },
]
maintainers = [ { name = "Jordan Ashley", email = "jordan.ashley@cern.ch" } ]
keywords = [
    "distance",
    "earth mover's distance",
    "emd",
    "energy mover's distance",
    "fastjet",
    "fjcontrib",
    "hidden geometry",
    "infrared safety",
    "irc-safe",
    "metric",
    "optimal transport",
    "ot",
    "particle physics",
    "wasserstein",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy >= 1.12.0",
]

[project.optional-dependencies]
test = [
    "coverage",
    "energyflow",
    "pot",
    "pytest",
    "h5py!=3.11.0",
]
jupyter = [
    "wurlitzer >= 2.0.0",
]

[project.urls]
Changelog = "https://github.com/thaler-lab/Wasserstein/blob/master/CHANGELOG.md"
Documentation = "https://thaler-lab.github.io/Wasserstein/"
Homepage = "https://github.com/thaler-lab/Wasserstein"
Issues = "https://github.com/thaler-lab/Wasserstein/issues"

[tool.scikit-build]
cmake.version = ">=3.20"
wheel.exclude = [
    "**.hh",
    "**.i"]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = true
logging.level = "INFO"

[tool.setuptools_scm]
# Ignore the commit hash in version
local_scheme = "no-local-version"

[[tool.scikit-build.generate]]
path = "wasserstein/_version.py"
template = '''
version = "${version}"
'''

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-extras = "test"
test-command = "pytest {project}/tests"
skip = "pp* *musllinux* cp313-*"
# FIXME: Avoid EnergyFlow installing a version of wasserstein from PyPI
# Install all of EnergyFlow's dependencies except wasserstein in advance
# h5py 3.11.0 is missing aarch64 wheels
before-test = [
    "pip list",
    "pip install h5py!=3.11.0 importlib-metadata>=1.4.0 numpy>=1.17.0",
    "pip install --no-deps git+https://github.com/thaler-lab/EnergyFlow.git",
    "pip list",
]
# test-requires = ["pytest", "pot", "energyflow"]
# FIXME: Until energyflow v1.3.5 is released will need to guard h5py from
# being upgraded to h5py 3.11.0 and use the pre-release energyflow
test-requires = ["pytest", "pot", "git+https://github.com/thaler-lab/EnergyFlow.git", "h5py!=3.11.0"]
environment-pass = ["SETUPTOOLS_SCM_PRETEND_VERSION"]
# FIXME: Needs energyflow v1.3.5 to avoid h5py 3.11.0
# environment.PIP_ONLY_BINARY = "numpy"
# environment.PIP_PREFER_BINARY = "1"
